hotfix url on view
